--- a/src/pages/student-profile/student-profile.html
+++ b/src/pages/student-profile/student-profile.html
@@ -35,6 +35,8 @@
       <p class="text bold">
         <span class="text label">State: </span>{{student.state}}</p>
       <p class="text bold">
+        <span class="text label">Class: </span>{{student.class}}</p>
+      <p class="text bold">
         <span class="text label">Gender: </span>{{student.gender}}</p>
       <p class="text bold">
         <span class="text label">Father's Name: </span>{{student.fatherFirstName}} {{student.fatherLastName}}</p>
