--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -26,6 +26,7 @@
       phoneNumber:phoneNumber.value,
       town:town.value,
       state:state.value,
+      class: class.value,
       fatherFirstName:fatherFirstName.value,
       fatherLastName:fatherLastName.value,
       motherFirstName:motherFirstName.value,
@@ -81,6 +82,10 @@
         <ion-label stacked>State</ion-label>
         <ion-input type="text" #state></ion-input>
         <ion-icon id="form-icon" item-right name="warning" *ngIf="!state.value"></ion-icon>
+      </ion-item>
+      <ion-item>
+        <ion-label stacked>Class</ion-label>
+        <ion-input type="text" #class></ion-input>
       </ion-item>
       <h6>Gender</h6>
       <ion-list no-lines radio-group [(ngModel)]="gender" name="gender">
@@ -142,6 +147,7 @@
       lastName.value = '';
       id.value = '';
       address.value = '';
+      class.value = '';
       phoneNumber.value = '';
       town.value = '';
       state.value = '';
