--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -20,21 +20,22 @@
     <img *ngIf="picture != ''" src="{{picture}}">
   </div>
   <form #studentForm="ngForm" (ngSubmit)="editStudent({
-      firstName: firstName.value,
-      initial: initial.value,
-      lastName: lastName.value,
-      id: id.value,
-      address: address.value,
-      phoneNumber:phoneNumber.value,
-      town:town.value,
-      state:state.value,
-      fatherFirstName:fatherFirstName.value,
-      fatherLastName:fatherLastName.value,
-      motherFirstName:motherFirstName.value,
-      motherLastName:motherLastName.value,
-      emergencyContactName:emergencyContactName.value,
-      emergencyRelationship:emergencyRelationship.value,
-      emergencyContactPhoneNumber:emergencyContactPhoneNumber.value
+    firstName: firstName.value,
+    initial: initial.value,
+    lastName: lastName.value,
+    id: id.value,
+    address: address.value,
+    phoneNumber:phoneNumber.value,
+    town:town.value,
+    state:state.value,
+    class: class.value,
+    fatherFirstName:fatherFirstName.value,
+    fatherLastName:fatherLastName.value,
+    motherFirstName:motherFirstName.value,
+    motherLastName:motherLastName.value,
+    emergencyContactName:emergencyContactName.value,
+    emergencyRelationship:emergencyRelationship.value,
+    emergencyContactPhoneNumber:emergencyContactPhoneNumber.value
     })">
     <ion-item-group>
       <ion-item>
@@ -81,6 +82,10 @@
         <ion-label stacked>State</ion-label>
         <ion-input [value]="student.state" type="text" #state></ion-input>
         <ion-icon id="form-icon" item-right name="warning" *ngIf="!state.value"></ion-icon>
+      </ion-item>
+      <ion-item>
+        <ion-label stacked>Class</ion-label>
+        <ion-input type="text" #class></ion-input>
       </ion-item>
       <h6>Gender</h6>
       <ion-list no-lines radio-group [(ngModel)]="gender" name="gender">
