--- a/src/pages/table/table.html
+++ b/src/pages/table/table.html
@@ -53,6 +53,9 @@
         <th>
           Absence
         </th>
+        <th>
+          Attendance %
+        </th>
       </tr>
       <tr *ngFor="let student of students">
         <td>
@@ -66,6 +69,9 @@
         </td>
         <td>
           {{student.absence}}
+        </td>
+        <td>
+          {{student.percent}}
         </td>
       </tr>
     </table>
