--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -144,8 +144,8 @@
         <ion-label>Is {{student.firstName}} {{student.lastName}} active?</ion-label>
         <ion-checkbox name="isActive" [(ngModel)]='isActive'></ion-checkbox>
       </ion-item>
-      <button type="submit" ion-button block color="primary">Edit</button>
-      <button type="button" ion-button block color="secondary" (click)="deleteStudent({id:id.value})">Delete</button>
+      <button type="submit" ion-button color="primary">Edit</button>
+      <button type="button" ion-button color="danger" (click)="deleteStudent({id:id.value})">Delete</button>
     </ion-item-group>
   </form>
 </ion-content>
