added export to XLSX

--- a/src/pages/export/export.html
+++ b/src/pages/export/export.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Export</ion-title>
   </ion-navbar>
 
@@ -17,11 +17,11 @@
 <button ion-button color="primary" (click)="exportTextTabToFile()">
   Export as Text Tab Delimited
 </button>
-
+<br>
 <button ion-button color="primary" (click)="exportCSVToFile()">
   Export as CSV
 </button>
-
+<br>
 <button ion-button color="primary" (click)="exportXLSXToFile()">
   Export as XLSX
 </button>
