--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -63,30 +63,6 @@
         <ion-input type="text" #lastName></ion-input>
         <ion-icon id="form-icon" item-right name="warning" *ngIf="!lastName.value"></ion-icon>
       </ion-item>
-      <ion-item>
-        <ion-label stacked>Address</ion-label>
-        <ion-input type="text" #address></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!address.value"></ion-icon>
-      </ion-item>
-      <ion-item>
-        <ion-label stacked>Phone Number</ion-label>
-        <ion-input type="text" #phoneNumber></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(phoneNumber.value)"></ion-icon>
-      </ion-item>
-      <ion-item>
-        <ion-label stacked>City</ion-label>
-        <ion-input type="text" #town></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!town.value"></ion-icon>
-      </ion-item>
-      <ion-item>
-        <ion-label stacked>State</ion-label>
-        <ion-input type="text" #state></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!state.value"></ion-icon>
-      </ion-item>
-      <ion-item>
-        <ion-label stacked>Class</ion-label>
-        <ion-input type="text" #class></ion-input>
-      </ion-item>
       <h6>Gender</h6>
       <ion-list no-lines radio-group [(ngModel)]="gender" name="gender">
         <ion-item>
@@ -102,6 +78,31 @@
           <ion-radio value="undisclosed"></ion-radio>
         </ion-item>
       </ion-list>
+      <h5 id="optional">Optional</h5>
+      <ion-item>
+        <ion-label stacked>Address</ion-label>
+        <ion-input type="text" #address></ion-input>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!address.value"></ion-icon> -->
+      </ion-item>
+      <ion-item>
+        <ion-label stacked>Phone Number</ion-label>
+        <ion-input type="text" #phoneNumber></ion-input>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(phoneNumber.value)"></ion-icon> -->
+      </ion-item>
+      <ion-item>
+        <ion-label stacked>City</ion-label>
+        <ion-input type="text" #town></ion-input>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!town.value"></ion-icon> -->
+      </ion-item>
+      <ion-item>
+        <ion-label stacked>State</ion-label>
+        <ion-input type="text" #state></ion-input>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!state.value"></ion-icon> -->
+      </ion-item>
+      <ion-item>
+        <ion-label stacked>Class</ion-label>
+        <ion-input type="text" #class></ion-input>
+      </ion-item>
       <h6>Father</h6>
       <ion-item>
         <ion-label stacked>First Name</ion-label>
@@ -142,7 +143,7 @@
       </ion-item>
     </ion-item-group>
     <button type="submit" ion-button color="primary">Create</button>
-      <button ion-button type="button" color="secondary" (click)="
+    <button ion-button type="button" color="secondary" (click)="
       firstName.value = '';
       initial.value = '';
       lastName.value = '';
