--- a/src/pages/export/export.html
+++ b/src/pages/export/export.html
@@ -7,22 +7,27 @@
 <ion-header>
 
   <ion-navbar color="primary">
+    <ion-buttons start>
+      <button ion-button (click)="goBack()" clear>
+        <span ion-text color="light" showWhen="ios">Cancel</span>
+        <ion-icon name="md-close" color="light" showWhen="android,windows"></ion-icon>
+      </button>
+    </ion-buttons>
     <ion-title>Export</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-<button ion-button color="primary" (click)="exportTextTabToFile()">
-  Export as Text Tab Delimited
-</button>
-<br>
-<button ion-button color="primary" (click)="exportCSVToFile()">
-  Export as CSV
-</button>
-<br>
-<button ion-button color="primary" (click)="exportXLSXToFile()">
-  Export as XLSX
-</button>
+<ion-content>
+  <br>
+  <button ion-button color="primary" (click)="exportTextTabToFile()" block>
+    Export as Text Tab Delimited
+  </button>
+  <button ion-button color="primary" (click)="exportCSVToFile()" block>
+    Export as CSV
+  </button>
+  <button ion-button color="primary" (click)="exportXLSXToFile()" block>
+    Export as XLSX
+  </button>
 </ion-content>
