--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -8,6 +8,14 @@
 
 
 <ion-content padding>
-  <button ion-button color="primary" (click)="exportToFile()">Export to File</button>
-  <button ion-button color="primary" (click)="exportFileToDropbox()">Export File to Dropbox</button>
+  <div *ngFor="let product of products">
+    <p>{{product.title}}</p>
+    <p>
+      {{product.description}}
+    </p>
+    <p>
+      {{product.priceAsDecimal}}
+    </p>
+    <button ion-button color="primary" (click)="buyProduct(product.productId)" large>buy</button>
+  </div>
 </ion-content>
