--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -7,11 +7,11 @@
 </ion-header>
 
 
-<ion-content padding>
-  <div *ngIf="products.length < 1">
+<ion-content>
+  <div id="not-loaded" *ngIf="products.length < 1">
       <div id="loader"></div> 
       <p>
-        Please wait while we get the in app products.
+        Please wait while we get the products.
       </p>
   </div>
   <div *ngFor="let product of products">
