--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -8,6 +8,28 @@
 
   <ion-navbar color="primary">
     <ion-title>Edit Record</ion-title>
+    <ion-buttons end>
+      <button ion-button (click)="editStudent({
+        firstName: firstName.value,
+        initial: initial.value,
+        lastName: lastName.value,
+        id: id.value,
+        address: address.value,
+        phoneNumber:phoneNumber.value,
+        town:town.value,
+        state:state.value,
+        class: class.value,
+        fatherFirstName:fatherFirstName.value,
+        fatherLastName:fatherLastName.value,
+        motherFirstName:motherFirstName.value,
+        motherLastName:motherLastName.value,
+        emergencyContactName:emergencyContactName.value,
+        emergencyRelationship:emergencyRelationship.value,
+        emergencyContactPhoneNumber:emergencyContactPhoneNumber.value
+        })">
+        Edit
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
