--- a/src/pages/student-profile/student-profile.html
+++ b/src/pages/student-profile/student-profile.html
@@ -21,8 +21,7 @@
       {{student.lastName}}
     </header>
   </div>
-  <div class="text">
-    <div class="landscape">
+  <div class="text text-box">
       <p class="text bold id">
         <span class="text label">ID: </span>{{student.id}}
       </p>
@@ -56,6 +55,5 @@
           *Student is currently inactive on the roster.*
         </p>
       </div>
-    </div>
   </div>
 </ion-content>
