left a message to tap the screen!

--- a/src/pages/student-list/student-list.html
+++ b/src/pages/student-list/student-list.html
@@ -47,6 +47,9 @@
         <p>
           <label class="label">State: </label>{{student.state}}
         </p>
+        <p class="attended">
+         Tap to see {{student.firstName}}'s profile!
+        </p>
       </div>
     </ion-item>
   </ion-list>
