added a select to filter by class. Still have to implement on creating a collection of classes. That will be done later.

--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -21,9 +21,15 @@
   <ion-searchbar (ionInput)="searchStudent($event)">
   </ion-searchbar>
   <ion-item>
-    <ion-label>Filter by: </ion-label>
+    <ion-label>Sort by: </ion-label>
     <ion-select [(ngModel)]="query" multiple="false" selectSettings="selectOptions">
-      <ion-option *ngFor="let option of selectOptions" (ionSelect)="queryData(option)">{{option}}</ion-option>
+      <ion-option *ngFor="let option of selectOptions" (ionSelect)="sortData(option)">{{option}}</ion-option>
+    </ion-select>
+  </ion-item>
+  <ion-item>
+    <ion-label>Filter by class: </ion-label>
+    <ion-select [(ngModel)]="filter" multiple="false" selectSettings="filterOptions">
+      <ion-option *ngFor="let class of classOptions" (ionSelect)="filterByClass(class)">{{class}}</ion-option>
     </ion-select>
   </ion-item>
   <ion-list>
