added filter options sort and filter are now popover in profile name is now under id instead of under the pic fixed an issue in edit.html

--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -107,7 +107,7 @@
       </ion-item>
       <ion-item>
         <ion-label stacked>Class</ion-label>
-        <ion-input type="text" #class></ion-input>
+        <ion-input [value]="student.class" type="text" #class></ion-input>
       </ion-item>
       <h6>Gender</h6>
       <ion-list no-lines radio-group [(ngModel)]="gender" name="gender">
