--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -27,7 +27,7 @@
         emergencyRelationship:emergencyRelationship.value,
         emergencyContactPhoneNumber:emergencyContactPhoneNumber.value
         })">
-        Edit
+        Save Changes
       </button>
     </ion-buttons>
   </ion-navbar>
@@ -167,7 +167,7 @@
         <ion-checkbox name="isActive" [(ngModel)]='isActive'></ion-checkbox>
       </ion-item>
     </ion-item-group>
-    <button type="submit" ion-button color="primary">Edit</button>
+    <button type="submit" ion-button color="primary">Save Changes</button>
     <button type="button" ion-button color="danger" (click)="deleteStudent({id:id.value})">Delete</button>
   </form>
 </ion-content>
