--- a/src/pages/student-list/student-list.html
+++ b/src/pages/student-list/student-list.html
@@ -15,7 +15,7 @@
   <ion-searchbar (ionInput)="searchStudent($event)">
   </ion-searchbar>
   <ion-item>
-    <ion-label>Filter by: </ion-label>
+    <ion-label>Sort by: </ion-label>
     <ion-select [(ngModel)]="query" multiple="false" selectSettings="selectOptions">
       <ion-option *ngFor="let option of selectOptions" (ionSelect)="queryData(option)">{{option}}</ion-option>
     </ion-select>
