--- a/src/pages/export/export.html
+++ b/src/pages/export/export.html
@@ -9,8 +9,7 @@
   <ion-navbar color="primary">
     <ion-buttons start>
       <button ion-button (click)="goBack()" clear>
-        <span ion-text color="light" showWhen="ios">Cancel</span>
-        <ion-icon name="md-close" color="light" showWhen="android,windows"></ion-icon>
+        <ion-icon name="close"></ion-icon>
       </button>
     </ion-buttons>
     <ion-title>Export</ion-title>
