--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -8,6 +8,9 @@
 
   <ion-navbar color="primary">
     <ion-title>Create Record</ion-title>
+    <ion-buttons start>
+      <button ion-button (click)="goBack()">Cancel</button>
+    </ion-buttons>
     <ion-buttons end>
       <button ion-button (click)="createStudent({
         firstName: firstName.value,
