--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -10,7 +10,7 @@
     <ion-title>Main</ion-title>
     <ion-buttons end>
       <button ion-button (click)="goToEvents()">Events</button>
-      <button ion-button (click)="goToCreate()"> Add </button>
+      <button ion-button (click)="goToCreate()">Add</button>
     </ion-buttons>
   </ion-navbar>
 
@@ -44,6 +44,9 @@
           </p>
           <p>
             <span class="label">ID: </span>{{student.id}}
+          </p>
+          <p *ngIf="student.phoneNumber">
+            <span class="label">Phone Number: </span>{{student.phoneNumber | phoneNumber}}
           </p>
           <button ion-button small color="primary" (click)="addAttendance({id: student.id})">
             Attended
