--- a/src/pages/student-profile/student-profile.html
+++ b/src/pages/student-profile/student-profile.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>Profile</ion-title>
+    <ion-title>{{student.firstName}}'s Profile</ion-title>
     <ion-buttons end>
       <button ion-button (click)="goToEdit(student.id)">
         Edit
