--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -91,22 +91,22 @@
       <ion-item>
         <ion-label stacked>Address</ion-label>
         <ion-input [value]="student.address" type="text" #address></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!address.value"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!address.value"></ion-icon> -->
       </ion-item>
       <ion-item>
         <ion-label stacked>Phone Number</ion-label>
         <ion-input [value]="student.phoneNumber" type="text" #phoneNumber></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(phoneNumber.value)"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!phoneNumber.value"></ion-icon> -->
       </ion-item>
       <ion-item>
         <ion-label stacked>City</ion-label>
         <ion-input [value]="student.town" type="text" #town></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!town.value"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!town.value"></ion-icon> -->
       </ion-item>
       <ion-item>
         <ion-label stacked>State</ion-label>
         <ion-input [value]="student.state" type="text" #state></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!state.value"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!state.value"></ion-icon> -->
       </ion-item>
       <ion-item>
         <ion-label stacked>Class</ion-label>
