--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -112,7 +112,7 @@
       <ion-item>
         <ion-label stacked>Phone Number</ion-label>
         <ion-input type="text" #phoneNumber></ion-input>
-        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(phoneNumber.value)"></ion-icon> -->
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="phoneNumber.value"></ion-icon> -->
       </ion-item>
       <ion-item>
         <ion-label stacked>City</ion-label>
