--- a/src/pages/student-profile/student-profile.html
+++ b/src/pages/student-profile/student-profile.html
@@ -42,12 +42,10 @@
       <span class="text label">Gender: </span>{{student.gender}}
     </p>
     <p class="text bold">
-      <span class="text label">Father's Name: </span>
-      {{student.fatherFirstName}} {{student.fatherLastName}}
+      <span class="text label">Father's Name: </span> {{student.fatherName}}
     </p>
     <p class="text bold">
-      <span class="text label">Mother's Name: </span>
-      {{student.motherFirstName}} {{student.motherLastName}}
+      <span class="text label">Mother's Name: </span> {{student.motherName}}
     </p>
     <h2> Emergency Contact </h2>
     <p class="text bold">
