--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -22,10 +22,8 @@
         town:town.value,
         state:state.value,
         class: class.value,
-        fatherFirstName:fatherFirstName.value,
-        fatherLastName:fatherLastName.value,
-        motherFirstName:motherFirstName.value,
-        motherLastName:motherLastName.value,
+        fatherName:fatherName.value,
+        motherName:motherName.value,
         emergencyContactName:emergencyContactName.value,
         emergencyRelationship:emergencyRelationship.value,
         emergencyContactPhoneNumber:emergencyContactPhoneNumber.value
@@ -42,7 +40,7 @@
   <!-- Picture will be taken from gallery or camera.  If the input is empty a default one will
        be chosen from based by gender. -->
   <div class="profile-image">
-    <img *ngIf="picture != ''" src="{{picture}}">
+    <img src="{{picture}}" alt="A profile picture">
   </div>
   <form #studentForm="ngForm" (ngSubmit)="editStudent({
     firstName: firstName.value,
@@ -54,10 +52,8 @@
     town:town.value,
     state:state.value,
     class: class.value,
-    fatherFirstName:fatherFirstName.value,
-    fatherLastName:fatherLastName.value,
-    motherFirstName:motherFirstName.value,
-    motherLastName:motherLastName.value,
+    fatherName:fatherName.value,
+    motherFirstName:motherName.value,
     emergencyContactName:emergencyContactName.value,
     emergencyRelationship:emergencyRelationship.value,
     emergencyContactPhoneNumber:emergencyContactPhoneNumber.value
@@ -129,25 +125,15 @@
       </ion-list>
       <h6>Father</h6>
       <ion-item>
-        <ion-label stacked>First Name</ion-label>
-        <ion-input [value]="student.fatherFirstName" type="text" #fatherFirstName></ion-input>
-        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!fatherFirstName.value"></ion-icon> -->
-      </ion-item>
-      <ion-item>
-        <ion-label stacked>Last Name</ion-label>
-        <ion-input [value]="student.fatherLastName" type="text" #fatherLastName></ion-input>
-        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!fatherLastName.value"></ion-icon> -->
+        <ion-label stacked>Name</ion-label>
+        <ion-input [value]="student.fatherName" type="text" #fatherName></ion-input>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!fatherName.value"></ion-icon> -->
       </ion-item>
       <h6>Mother</h6>
       <ion-item>
-        <ion-label stacked>First Name</ion-label>
-        <ion-input [value]="student.motherFirstName" type="text" #motherFirstName></ion-input>
-        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!motherFirstName.value"></ion-icon> -->
-      </ion-item>
-      <ion-item>
-        <ion-label stacked>Last Name</ion-label>
-        <ion-input [value]="student.motherLastName" type="text" #motherLastName></ion-input>
-        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!motherLastName.value"></ion-icon> -->
+        <ion-label stacked>Name</ion-label>
+        <ion-input [value]="student.motherName" type="text" #motherName></ion-input>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!motherName.value"></ion-icon> -->
       </ion-item>
       <h6>Emergency Contact</h6>
       <ion-item>
