--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -59,10 +59,10 @@
     emergencyContactPhoneNumber:emergencyContactPhoneNumber.value
     })">
     <ion-item-group>
-      <ion-item>
+      <!-- <ion-item>
         <ion-label stacked>Picture</ion-label>
         <ion-input type="text" readonly="true" name="picture" [(ngModel)]="picture"></ion-input>
-      </ion-item>
+      </ion-item> -->
       <button (click)="browsePicture()" type="button" ion-button color="primary">Browse</button>
       <button (click)="picture = ''" type="button" ion-button color="secondary">Reset</button>
       <ion-item>
