--- a/src/pages/createevent/createevent.html
+++ b/src/pages/createevent/createevent.html
@@ -3,19 +3,75 @@
   <ion-navbar color="primary">
     <ion-title>Create Event</ion-title>
     <ion-buttons end>
-      <button ion-button>Create</button>
+      <button ion-button (click)="createNewEvent()">Create</button>
     </ion-buttons>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
-  <button ion-button full>Set Date/s</button>
-  <button ion-button full (click)="addLogo()">Add Logo</button>
-  <!--Only if picture has a value-->
-  <button ion-button full color="secondary" (click)="previewLogo()">See Logo Preview</button>
+  <div *ngIf="logo" class="logo-image">
+    <img src="{{logo}}" alt="A picture for the logo for the event">
+  </div>
+  <ion-item-group>
+    <ion-item>
+      <ion-label stacked>Name</ion-label>
+      <ion-input type="text" #name placeholder="Write your Event Name" [(ngModel)]="eventName"></ion-input>
+      <ion-icon id="form-icon" item-right name="warning" *ngIf="!name.value"></ion-icon>
+    </ion-item>
+  <ion-item>
+    <ion-label>Start Date</ion-label>
+    <ion-datetime displayFormat="D MMMM YYYY" pickerFormat="D MMMM YYYY" [(ngModel)]="startDate"></ion-datetime>
+  </ion-item>
+  <ion-item>
+    <ion-label>Has End Date?</ion-label>
+    <ion-checkbox [(ngModel)]="hasEndDate"></ion-checkbox>
+  </ion-item>
+  <ion-item *ngIf="hasEndDate" (ionChange)="resetEndDate()">
+    <ion-label>End Date</ion-label>
+    <ion-datetime displayFormat="D MMMM YYYY" pickerFormat="D MMMM YYYY" [(ngModel)]="endDate"></ion-datetime>
+  </ion-item>
+</ion-item-group>
+  <button (click)="addLogo()" type="button" ion-button color="primary">Browse</button>
+  <button (click)="logo = '' " type="button" ion-button color="secondary">Reset</button>
+  <ion-list no-lines>
+    <ion-searchbar (ionInput)="search($event)"></ion-searchbar>
+    <ion-item *ngFor="let student of students">
+      <ion-avatar item-left>
+        <img src="{{student.picture}}" alt="{{student.firstName}}'s profile image">
+      </ion-avatar>
+      <div class="amaranthus">
+        <p>
+          <span class="label name">Name: </span>
+          <span class="name">{{student.firstName}}
+            <span *ngIf="student.initial">{{student.initial}}</span> {{student.lastName}}</span>
+        </p>
+        <p>
+          <span class="label">ID: </span>{{student.id}}
+        </p>
+        <p *ngIf="student.phoneNumber">
+          <span class="label">Phone Number: </span>{{student.phoneNumber}}
+        </p>
+        <button ion-button small color="primary" (click)="addToEvent(student.id)">
+          Add
+        </button>
+        <button ion-button small color="secondary" (click)="removeFromEvent(student.id)">
+          Remove
+        </button>
+        <div>
+          <p class="left attended" *ngIf="ifOnEventList(student.id)">
+            {{student.firstName}} was added to event list!
+          </p>
+          <p class="left attended" *ngIf="!ifOnEventList(student.id)">
+            {{student.firstName}} wasn't added to event list!
+          </p>
+        </div>
+      </div>
+    </ion-item>
+  </ion-list>
+  <button ion-button (click)="createNewEvent()">Create</button>
   <ion-fab bottom right>
-    <button ion-fab color="secondary"><ion-icon name="add"></ion-icon></button>
+    <button ion-fab color="secondary" (click)="addStudent()">
+      <ion-icon name="add"></ion-icon>
+    </button>
   </ion-fab>
 </ion-content>
