--- a/src/pages/createevent/createevent.html
+++ b/src/pages/createevent/createevent.html
@@ -18,9 +18,10 @@
       <ion-input type="text" #name placeholder="Write your Event Name" [(ngModel)]="eventName"></ion-input>
       <ion-icon id="form-icon" item-right name="warning" *ngIf="!name.value"></ion-icon>
     </ion-item>
+  </ion-item-group>
   <ion-item>
     <ion-label>Start Date</ion-label>
-    <ion-datetime displayFormat="D MMMM YYYY" pickerFormat="D MMMM YYYY" [(ngModel)]="startDate"></ion-datetime>
+    <ion-datetime displayFormat="MMMM DD YYYY" pickerFormat="MMMM DD YYYY" [(ngModel)]="startDate"></ion-datetime>
   </ion-item>
   <ion-item>
     <ion-label>Has End Date?</ion-label>
@@ -28,9 +29,9 @@
   </ion-item>
   <ion-item *ngIf="hasEndDate" (ionChange)="resetEndDate()">
     <ion-label>End Date</ion-label>
-    <ion-datetime displayFormat="D MMMM YYYY" pickerFormat="D MMMM YYYY" [(ngModel)]="endDate"></ion-datetime>
+    <ion-datetime displayFormat="MMMM DD YYYY" pickerFormat="MMMM DD YYYY" [(ngModel)]="endDate"></ion-datetime>
+    <ion-icon id="form-icon" item-right name="warning" *ngIf="!this.endDate && hasEndDate"></ion-icon>
   </ion-item>
-</ion-item-group>
   <button (click)="addLogo()" type="button" ion-button color="primary">Browse</button>
   <button (click)="logo = '' " type="button" ion-button color="secondary">Reset</button>
   <ion-list no-lines>
