--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -19,13 +19,14 @@
     </ion-select>
   </ion-item>
   <ion-card *ngFor="let event of events">
-    <img src={{event.img}}/> <!--TODO: Only will show IF picture SRC has any value. -->
+    <img src={{event.logo}} alt="logo"/> 
     <ion-card-content>
       <ion-card-title>
         {{event.name}}
       </ion-card-title>
-      <h3><span>Date:</span> {{event.date}}</h3>
-      <br>
+      <h3><span>Start Date:</span> {{event.startDate}}</h3>
+      <h3 *ngIf="event.endDate"><span>End Date:</span> {{event.endDate}}</h3>
+      <!-- <br> -->
       <p><span>Totals Members:</span> {{event.totalMembers}}</p>
       <p><span>Total Attendance:</span> {{event.totalAttendance}}</p>
       <p><span>Total Absence:</span> {{event.totalAbsence}}</p>
